finish version mobile. do half of issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,47 +6,64 @@
 :root {
     font-family: 'Rubik', sans-serif;
 }
-.header{
-    display: flex;
+
+/*
+.main {
+    background-color: #3CDBC0;
+    /* height: 80vh; */
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    position: sticky;
+    text-align: center;
 }
+ */
+
+.header {
+    width: 100%;; 
+    position: fixed;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .logo-adalab {
     width: 155px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-block: 0.625em;
 }
+
 .menu {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
-.menu-item{
+
+.menu-item {
     width: 100%;
     font-size: 16px;
     font-weight: 400;
-    word-spacing: 20px;
-    padding-top: 10px;
-    padding-bottom: 13px;
+    padding-bottom: 0.813em;
+    padding-inline: 0.625em;
+    text-transform: uppercase;
 }
-.menu-item a {
+.menu-item {
     font-family: 'Rubik', sans-serif;
     color:#4a4a4a;
     text-decoration: none;
 }
 .main {
     background-color: #3CDBC0;
-    height: 100vh;
+    margin-top: 18vh;
+    height: 82vh;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
     text-align: center;
 }
 .h1 {
     color:#FFFFFF;
-    font-size: 30px;
+    font-size: 1.875em;
     font-weight: 700;
-
+    text-transform: capitalize;
+    width: min-content;
 }
